Fix dark mode colors

--- a/src/components/account/entity/entity.styl
+++ b/src/components/account/entity/entity.styl
@@ -78,4 +78,12 @@ pre
 
     #content
         color #ffffff
-        background-color #38444c
+        background-color #373838
+
+    .img-thumbnail
+        border-color #697278
+        background-color #373838
+
+    .filename
+        span
+            color #697278
