--- a/src/components/account/entity/list/list.styl
+++ b/src/components/account/entity/list/list.styl
@@ -78,7 +78,15 @@
         border-color #697278
 
         .media
-            border-color #4e5960
+            border-color #52585b
 
             &.router-link-exact-active
-                background #455158
+                background #494d4f
+
+                img
+                    border-color #697278
+                    background-color #494d4f
+
+            img
+                border-color #697278
+                background-color #373838
