--- a/src/components/app.styl
+++ b/src/components/app.styl
@@ -137,7 +137,7 @@ i
 @media (prefers-color-scheme: dark)
     body
         color #ffffff
-        background-color #38444c
+        background-color #373838
 
     h1
         color #ffffff
