--- a/src/components/auth/auth.styl
+++ b/src/components/auth/auth.styl
@@ -110,7 +110,7 @@
     .content
         .borderbox
             border-color #697278
-            background-color #38444c
+            background-color #373838
 
             li
                 border-color #697278
